{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 82,
  "lineage": "a673dd29-d66c-329d-d586-4c4d03c0e5fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prodserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019f9b3318b7155c5",
            "arn": "arn:aws:ec2:us-east-2:679309468658:instance/i-01c922c1a48bb6c65",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c922c1a48bb6c65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newpriya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cab1c996b1954fac",
            "private_dns": "ip-10-30-3-183.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.3.183",
            "public_dns": "ec2-13-58-166-56.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.166.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0094b7842a1e65fcb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03dbaa72074dc3fd2",
            "tags": {
              "Name": "prod-server1"
            },
            "tags_all": {
              "Name": "prod-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f247ef57f792e12b"
            ]
          },
          "dependencies": [
            "aws_security_group.prod-sg",
            "aws_subnet.publics",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:679309468658:instance/i-0e66b98af29f89e8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e66b98af29f89e8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "priya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055de165b566c89c5",
            "private_dns": "ip-10-20-3-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.3.71",
            "public_dns": "ec2-54-87-222-108.compute-1.amazonaws.com",
            "public_ip": "54.87.222.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09e25a154f546880d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054e1e11f4fcab558",
            "tags": {
              "Name": "dev-server1"
            },
            "tags_all": {
              "Name": "dev-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a89eafa325232e01"
            ]
          },
          "dependencies": [
            "aws_security_group.dev-sg",
            "aws_subnet.public1",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:internet-gateway/igw-0b3accdb3fb5d6921",
            "id": "igw-0b3accdb3fb5d6921",
            "owner_id": "679309468658",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-020432da5faf1bd79"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prodigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:679309468658:internet-gateway/igw-0ddd3f4d6d9b84aa5",
            "id": "igw-0ddd3f4d6d9b84aa5",
            "owner_id": "679309468658",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0f90efcea0bf3bb05"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "communications",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a5c75c59ad57d09805491791",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a5c75c59ad57d09",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02394ceb1f7ecbab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_route_table.rt",
            "aws_vpc.dev",
            "aws_vpc.prod",
            "aws_vpc_peering_connection.owner"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0db58e0f91921e459662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db58e0f91921e459",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02394ceb1f7ecbab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prodigw",
            "aws_route_table.rtable",
            "aws_vpc.dev",
            "aws_vpc.prod",
            "aws_vpc_peering_connection.owner"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:route-table/rtb-01a5c75c59ad57d09",
            "id": "rtb-01a5c75c59ad57d09",
            "owner_id": "679309468658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3accdb3fb5d6921",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt"
            },
            "tags_all": {
              "Name": "dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-020432da5faf1bd79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:679309468658:route-table/rtb-0db58e0f91921e459",
            "id": "rtb-0db58e0f91921e459",
            "owner_id": "679309468658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddd3f4d6d9b84aa5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rt"
            },
            "tags_all": {
              "Name": "prod-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f90efcea0bf3bb05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prodigw",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d28be431107b4395",
            "route_table_id": "rtb-0db58e0f91921e459",
            "subnet_id": "subnet-03dbaa72074dc3fd2"
          },
          "dependencies": [
            "aws_internet_gateway.prodigw",
            "aws_route_table.rtable",
            "aws_subnet.publics",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02797305b4322aa66",
            "route_table_id": "rtb-0db58e0f91921e459",
            "subnet_id": "subnet-077fbe77d4783ca6b"
          },
          "dependencies": [
            "aws_internet_gateway.prodigw",
            "aws_route_table.rtable",
            "aws_subnet.publics",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049d815fd802f822a",
            "route_table_id": "rtb-0db58e0f91921e459",
            "subnet_id": "subnet-02e4af223a1212826"
          },
          "dependencies": [
            "aws_internet_gateway.prodigw",
            "aws_route_table.rtable",
            "aws_subnet.publics",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a58bbb47413eade",
            "route_table_id": "rtb-01a5c75c59ad57d09",
            "subnet_id": "subnet-054e1e11f4fcab558"
          },
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_route_table.rt",
            "aws_subnet.public1",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e742131f3793f79a",
            "route_table_id": "rtb-01a5c75c59ad57d09",
            "subnet_id": "subnet-07d38569653146bc9"
          },
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_route_table.rt",
            "aws_subnet.public1",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a70ef84a48378c0",
            "route_table_id": "rtb-01a5c75c59ad57d09",
            "subnet_id": "subnet-002330d6ced9c47aa"
          },
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_route_table.rt",
            "aws_subnet.public1",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:security-group/sg-0a89eafa325232e01",
            "description": "allow inbound and outbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow only outbound rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a89eafa325232e01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow only inbound rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow all rules",
            "name_prefix": "",
            "owner_id": "679309468658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg"
            },
            "tags_all": {
              "Name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-020432da5faf1bd79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:679309468658:security-group/sg-0f247ef57f792e12b",
            "description": "allow inbound and outbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow only outbound rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f247ef57f792e12b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow only inbound rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow all rules",
            "name_prefix": "",
            "owner_id": "679309468658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg"
            },
            "tags_all": {
              "Name": "prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f90efcea0bf3bb05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-002330d6ced9c47aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002330d6ced9c47aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public1"
            },
            "tags_all": {
              "Name": "dev-public1"
            },
            "vpc_id": "vpc-020432da5faf1bd79"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-054e1e11f4fcab558",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054e1e11f4fcab558",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public2"
            },
            "tags_all": {
              "Name": "dev-public2"
            },
            "vpc_id": "vpc-020432da5faf1bd79"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-07d38569653146bc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d38569653146bc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public3"
            },
            "tags_all": {
              "Name": "dev-public3"
            },
            "vpc_id": "vpc-020432da5faf1bd79"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:679309468658:subnet/subnet-02e4af223a1212826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e4af223a1212826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public1"
            },
            "tags_all": {
              "Name": "prod-public1"
            },
            "vpc_id": "vpc-0f90efcea0bf3bb05"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:679309468658:subnet/subnet-03dbaa72074dc3fd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dbaa72074dc3fd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public2"
            },
            "tags_all": {
              "Name": "prod-public2"
            },
            "vpc_id": "vpc-0f90efcea0bf3bb05"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:679309468658:subnet/subnet-077fbe77d4783ca6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077fbe77d4783ca6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public3"
            },
            "tags_all": {
              "Name": "prod-public3"
            },
            "vpc_id": "vpc-0f90efcea0bf3bb05"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:vpc/vpc-020432da5faf1bd79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0967c2e7a38807f9d",
            "default_route_table_id": "rtb-09da99a30642aef46",
            "default_security_group_id": "sg-0018c558fd9ff3b80",
            "dhcp_options_id": "dopt-03d16827be5e7d9c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020432da5faf1bd79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09da99a30642aef46",
            "owner_id": "679309468658",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:679309468658:vpc/vpc-0f90efcea0bf3bb05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0604df1ceaadb4a66",
            "default_route_table_id": "rtb-04db65a22e7204ebe",
            "default_security_group_id": "sg-06148955cfa56d80e",
            "dhcp_options_id": "dopt-0525478806211c174",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f90efcea0bf3bb05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04db65a22e7204ebe",
            "owner_id": "679309468658",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "owner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-02394ceb1f7ecbab1",
            "peer_owner_id": "679309468658",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0f90efcea0bf3bb05",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "prod-dev"
            },
            "tags_all": {
              "Name": "prod-dev"
            },
            "vpc_id": "vpc-020432da5faf1bd79"
          },
          "dependencies": [
            "aws_vpc.dev",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-02394ceb1f7ecbab1",
            "peer_owner_id": "679309468658",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0f90efcea0bf3bb05",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "accepter"
            },
            "tags_all": {
              "Name": "accepter"
            },
            "vpc_id": "vpc-020432da5faf1bd79",
            "vpc_peering_connection_id": "pcx-02394ceb1f7ecbab1"
          },
          "dependencies": [
            "aws_vpc.dev",
            "aws_vpc.prod",
            "aws_vpc_peering_connection.owner"
          ]
        }
      ]
    }
  ]
}